# Tree-Sitter-Cisco

./: .gitignore  CHANGELOG.md  COMMAND_DICTIONARY.md  CONTRIBUTING_GRAMMAR.md  Cargo.toml  Package.swift  README.md  debug_context_clean.txt  demo.cfg  extraction_log.txt  go.mod  go.sum  grammar.js  index.js  log.html  package.json  pom.xml  setup.py  test_context.cfg  test_inventory.cfg  test_version.cfg  tree-sitter-cisco.gemspec  tree-sitter.json
bindings/csharp/: Cisco.cs  TreeSitterCisco.csproj
bindings/go/: binding.go  binding_test.go
bindings/node/: index.d.ts
bindings/perl/: Cisco.xs  Makefile.PL
bindings/rust/: build.rs  lib.rs
bindings/swift/: cisco.h
cisco-config/: grammar.js  package.json
cisco-config/rules/: config.js  interfaces.js  qos.js  routing.js  security.js  system.js  vlan.js
cisco-config/src/: grammar.json  node-types.json  parser.c  scanner.c
queries/: folds.scm  highlights.scm  indents.scm  injections.scm
rules/: common.js  config.js  operational.js
rules/common/: primitives.js
scratch/: debug_context_clean.txt  debug_trace_ping.txt  test_failure.txt  test_logic.js
scripts/: error_mapper.py  extract_corpus.js  refine_debug.py  safe-run.js  sync-metadata.js  trace_analyzer.js  trace_analyzer.py
src/: grammar.json  node-types.json  parser.c  scanner.c
src/scanner/: banner.h  helpers.h  indent.h  network.h  noise.h  output.h  prompt.h  types.h
test/: test.cfg
test/corpus/: abbreviations.txt  advanced_config.txt  basic.txt  context_states.txt  coverage_gap.txt  diagnostics.txt  global_config.txt  hierarchy.txt  (+12 more)
(+33 files in other folders)
